--- a/public/reading-style-quiz-page.html
+++ b/public/reading-style-quiz-page.html
@@ -472,34 +472,34 @@
             "实用进取型": { score: 0, description: "你期望通过阅读获取知识、提升能力，偏爱实用性强的书籍，如专业书籍、自我提升类作品，阅读对你而言是自我投资的过程。" },
             "专一探索型": { score: 0, description: "你对特定题材充满热情，喜欢深入探索某一领域的作品，可能会成为某一作家或某一类型书籍的忠实粉丝。" },
             "多元好奇型": { score: 0, description: "你对不同题材、风格的书籍均有探索欲望，喜欢尝试各种类型的作品，阅读广泛，知识面丰富。" },
-            "亲子陪伴型": { score: 0, description: "你重视亲子阅读，通过阅读增进亲子关系，助力孩子成长，你可能会精心挑选适合孩子的读物，并乐于与孩子分享阅读时光。" },
-            "体育热爱型": { score: 0, description: "你热爱体育运动，希望通过阅读了解体育知识和运动员故事，体育主题的书籍能激发你的阅读热情。" },
-            "emo急救包": { score: 0, description: "你会借助阅读缓解压力，放松身心，从崩溃到自愈的进阶指南，阅读对你而言是一种情绪疗愈的方式。" },
-            "快乐续命水": { score: 0, description: "给疲惫成年人的精神SPA，你通过轻松愉快的阅读体验寻找快乐，喜欢那些能带给你欢笑和放松的书籍。" },
-            "细节控考据党": { score: 0, description: "你喜欢探究词语渊源、语法逻辑，对汉字演变、读音规范等有执着的兴趣，你关注文字背后的知识体系，享受深入研究的过程。" }
+            "温柔守护型": { score: 0, description: "你重视亲子阅读，通过阅读增进亲子关系，助力孩子成长，你可能会精心挑选适合孩子的读物，并乐于与孩子分享阅读时光。" },
+            "热血拼搏型": { score: 0, description: "你热爱体育运动，希望通过阅读了解体育知识和运动员故事，体育主题的书籍能激发你的阅读热情。" },
+            "情感疗愈型": { score: 0, description: "你会借助阅读缓解压力，放松身心，从崩溃到自愈的进阶指南，阅读对你而言是一种情绪疗愈的方式。" },
+            "乐观感染型": { score: 0, description: "给疲惫成年人的精神SPA，你通过轻松愉快的阅读体验寻找快乐，喜欢那些能带给你欢笑和放松的书籍。" },
+            "细节考据型": { score: 0, description: "你喜欢探究词语渊源、语法逻辑，对汉字演变、读音规范等有执着的兴趣，你关注文字背后的知识体系，享受深入研究的过程。" }
         };
 
         // 定义题目选项对应的分数
         const scoringRules = {
             1: {
-                A: { "冒险刺激型": 2, "快乐续命水": 1 },
-                B: { "文艺抒情型": 2, "emo急救包": 1 },
+                A: { "冒险刺激型": 2, "乐观感染型": 1 },
+                B: { "文艺抒情型": 2, "情感疗愈型": 1 },
                 C: { "实用进取型": 3 }
             },
             2: {
                 A: { "专一探索型": 3 },
                 B: { "多元好奇型": 3 },
-                C: { "实用进取型": 1, "细节控考据党": 1 }
+                C: { "实用进取型": 1, "细节考据型": 1 }
             },
             3: {
-                A: { "细节控考据党": 3, "实用进取型": 1 },
-                B: { "文艺抒情型": 1, "emo急救包": 1 },
-                C: { "多元好奇型": 2, "快乐续命水": 1 }
+                A: { "细节考据型": 3, "实用进取型": 1 },
+                B: { "文艺抒情型": 1, "情感疗愈型": 1 },
+                C: { "多元好奇型": 2, "乐观感染型": 1 }
             },
             4: {
-                A: { "快乐续命水": 3, "冒险刺激型": 1 },
-                B: { "实用进取型": 3, "细节控考据党": 1 },
-                C: { "文艺抒情型": 2, "emo急救包": 2 }
+                A: { "乐观感染型": 3, "冒险刺激型": 1 },
+                B: { "实用进取型": 3, "细节考据型": 1 },
+                C: { "文艺抒情型": 2, "情感疗愈型": 2 }
             },
             5: {
                 A: { "专一探索型": 3, "冒险刺激型": 1 },
@@ -507,39 +507,39 @@
                 C: { "多元好奇型": 1, "文艺抒情型": 1 }
             },
             6: {
-                A: { "快乐续命水": 2, "亲子陪伴型": 1 },
-                B: { "文艺抒情型": 2, "emo急救包": 1 },
-                C: { "专一探索型": 2, "细节控考据党": 1 }
+                A: { "乐观感染型": 2, "温柔守护型": 1 },
+                B: { "文艺抒情型": 2, "情感疗愈型": 1 },
+                C: { "专一探索型": 2, "细节考据型": 1 }
             },
             7: {
-                A: { "冒险刺激型": 3, "体育热爱型": 1 },
+                A: { "冒险刺激型": 3, "热血拼搏型": 1 },
                 B: { "文艺抒情型": 3 },
-                C: { "实用进取型": 2, "细节控考据党": 2 }
+                C: { "实用进取型": 2, "细节考据型": 2 }
             },
             8: {
-                A: { "实用进取型": 2, "细节控考据党": 1 },
-                B: { "多元好奇型": 2, "亲子陪伴型": 1 },
-                C: { "专一探索型": 1, "emo急救包": 1 }
+                A: { "实用进取型": 2, "细节考据型": 1 },
+                B: { "多元好奇型": 2, "温柔守护型": 1 },
+                C: { "专一探索型": 1, "情感疗愈型": 1 }
             },
             9: {
-                A: { "细节控考据党": 3, "专一探索型": 1 },
+                A: { "细节考据型": 3, "专一探索型": 1 },
                 B: { "实用进取型": 1, "多元好奇型": 1 },
-                C: { "快乐续命水": 2, "冒险刺激型": 1 }
+                C: { "乐观感染型": 2, "冒险刺激型": 1 }
             },
             10: {
-                A: { "亲子陪伴型": 3, "快乐续命水": 1 },
-                B: { "亲子陪伴型": 3, "文艺抒情型": 1 },
-                C: { "亲子陪伴型": 2, "多元好奇型": 1 }
+                A: { "温柔守护型": 3, "乐观感染型": 1 },
+                B: { "温柔守护型": 3, "文艺抒情型": 1 },
+                C: { "温柔守护型": 2, "多元好奇型": 1 }
             },
             11: {
-                A: { "体育热爱型": 3, "emo急救包": 1 },
-                B: { "体育热爱型": 3, "实用进取型": 1 },
-                C: { "体育热爱型": 3, "冒险刺激型": 1 }
+                A: { "热血拼搏型": 3, "情感疗愈型": 1 },
+                B: { "热血拼搏型": 3, "实用进取型": 1 },
+                C: { "热血拼搏型": 3, "冒险刺激型": 1 }
             },
             12: {
-                A: { "快乐续命水": 3 },
-                B: { "emo急救包": 3 },
-                C: { "emo急救包": 2, "文艺抒情型": 1 }
+                A: { "乐观感染型": 3 },
+                B: { "情感疗愈型": 3 },
+                C: { "情感疗愈型": 2, "文艺抒情型": 1 }
             }
         };
 
