add weight for 热血拼搏型

--- a/public/reading-style-quiz-page.html
+++ b/public/reading-style-quiz-page.html
@@ -484,10 +484,10 @@
             1: {
                 A: { "冒险刺激型": 2, "乐观感染型": 1 },
                 B: { "文艺抒情型": 2, "情感疗愈型": 1 },
-                C: { "实用进取型": 3 }
+                C: { "实用进取型": 3, "热血拼搏型": 2 }
             },
             2: {
-                A: { "专一探索型": 3 },
+                A: { "专一探索型": 3, "热血拼搏型": 2 },
                 B: { "多元好奇型": 3 },
                 C: { "实用进取型": 1, "细节考据型": 1 }
             },
@@ -512,7 +512,7 @@
                 C: { "专一探索型": 2, "细节考据型": 1 }
             },
             7: {
-                A: { "冒险刺激型": 3, "热血拼搏型": 1 },
+                A: { "冒险刺激型": 3, "热血拼搏型": 3 },
                 B: { "文艺抒情型": 3 },
                 C: { "实用进取型": 2, "细节考据型": 2 }
             },
