--- a/public/jianying/index.html
+++ b/public/jianying/index.html
@@ -19,9 +19,9 @@
       <div class="card-b">
         <div class="row">
           <button id="pickJY" class="btn btn-select">选择剪映目录</button>
-          <div class="right toolbar">
+          <!-- <div class="right toolbar">
             <button id="resetAll" class="btn danger">清除记忆并重选</button>
-          </div>
+          </div> -->
         </div>
 
         <div class="spacer"></div>
@@ -31,7 +31,7 @@
           还没有选择剪映草稿根目录。请点击“选择剪映目录”，并在弹出的系统对话框中授权写入。
         </div>
         <div id="jyHintSelected" class="callout ok hidden">
-          已选择并授权写入。你可以直接粘贴加密字符串并开始处理。如需更换目录，可点“重新选择剪映目录”。
+          已选择并授权写入。可以直接粘贴加密字符串并开始处理。如需更换目录，可点“重新选择剪映目录”。
         </div>
 
         <div class="spacer"></div>
