--- a/public/jianying/index.html
+++ b/public/jianying/index.html
@@ -5,17 +5,17 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Web 版 B 系统（剪映草稿生成）</title>
+  <title>Web 版剪映草稿生成</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
   <div class="wrap">
-    <h1>Web 版 B 系统（剪映草稿生成）</h1>
+    <h1>Web 版剪映草稿生成</h1>
 
     <!-- ① 选择并授权剪映目录 -->
     <div class="card">
-      <div class="card-h">① 剪映目录</div>
+      <div class="card-h">① 选择剪映目录</div>
       <div class="card-b">
         <div class="row">
           <button id="pickJY" class="btn btn-select">选择剪映目录</button>
@@ -28,10 +28,13 @@
 
         <!-- 动态提示：未选择 / 已选择 -->
         <div id="jyHintNotSelected" class="callout warn">
-          还没有选择剪映草稿根目录。请点击“选择剪映目录”，并在弹出的系统对话框中授权写入。
+          还没有选择剪映草稿根目录。请点击<strong>“选择剪映目录”</strong>，并在弹出的系统对话框中授权写入。
+          </br>
+          <button id="openHelpLink" class="linklike" type="button" aria-label="查看操作指引">如何查看我的剪映草稿根目录？</button>
+
         </div>
         <div id="jyHintSelected" class="callout ok hidden">
-          已选择并授权写入。可以直接粘贴加密字符串并开始处理。如需更换目录，可点“重新选择剪映目录”。
+          已选择并授权写入。
         </div>
 
         <div class="spacer"></div>
@@ -41,12 +44,15 @@
           <div id="jyPathDisplay" class="dir-display muted">尚未选择</div>
         </div>
 
-        <div class="spacer"></div>
-        <div class="note muted">
+        <!-- <div class="spacer"></div>
+        <div class="row">
+          <button id="openHelp" class="btn ghost">查看“草稿目录”位置指引</button>
+        </div> -->
+        <!-- <div class="note muted">
           不知道剪映草稿目录在哪？一般在
           <code>（用户目录）/Movies/JianyingPro/User Data/Projects/com.lveditor.draft</code>。<br />
           点击上面的“选择剪映目录”，授权后我们会在其中新建一个以时间戳命名的草稿文件夹。
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -56,7 +62,7 @@
       <div class="card-b">
         <div class="field">
           <label>加密字符串（未解码）</label>
-          <textarea id="encodedInput" placeholder="把 A 系统输出的加密字符串粘贴到这里"></textarea>
+          <textarea id="encodedInput" placeholder="把 COZE 输出的加密字符串粘贴到这里"></textarea>
         </div>
 
         <div class="block-gap field">
@@ -66,14 +72,14 @@
 
         <div class="block-gap grid2">
           <div class="field">
-            <label>主题</label>
+            <label>主题（暂未实现）</label>
             <select id="theme">
               <option value="default">默认</option>
               <option value="dark">暗色</option>
             </select>
           </div>
           <div class="field">
-            <label>画幅</label>
+            <label>画幅（暂未实现）</label>
             <select id="aspect">
               <option value="1080x1920">1080 × 1920</option>
               <option value="1200x1600">1200 × 1600</option>
@@ -135,6 +141,14 @@
   <!-- 图片预览 Modal -->
   <div id="imgModal" class="modal" role="dialog" aria-modal="true">
     <div class="modal-inner"><img id="imgPreview" alt="预览" /></div>
+  </div>
+
+  <!-- 目录指引图 Modal -->
+  <div id="helpModal" class="modal" role="dialog" aria-modal="true">
+    <button class="modal-close" aria-label="关闭">×</button>
+    <div class="modal-inner">
+      <img id="helpImage" alt="剪映草稿目录位置指引" />
+    </div>
   </div>
 
   <!-- 普通脚本，避免 file:// 下 ES Module 的 CORS 限制 -->
