--- a/public/jianying/index.html
+++ b/public/jianying/index.html
@@ -18,7 +18,7 @@
       <div class="card-h">① 选择剪映目录</div>
       <div class="card-b">
         <div class="row">
-          <button id="pickJY" class="btn btn-select">选择剪映目录</button>
+          <button id="pickJY" class="btn btn-select">选择剪映草稿目录</button>
           <!-- <div class="right toolbar">
             <button id="resetAll" class="btn danger">清除记忆并重选</button>
           </div> -->
@@ -28,9 +28,9 @@
 
         <!-- 动态提示：未选择 / 已选择 -->
         <div id="jyHintNotSelected" class="callout warn">
-          还没有选择剪映草稿根目录。请点击<strong>“选择剪映目录”</strong>，并在弹出的系统对话框中授权写入。
+          请点击<strong>“选择剪映草稿目录”</strong>，并在弹出的系统对话框中授权写入。
           </br>
-          <button id="openHelpLink" class="linklike" type="button" aria-label="查看操作指引">如何查看我的剪映草稿根目录？</button>
+          <button id="openHelpLink" class="linklike" type="button" aria-label="查看操作指引">如何查看我的剪映草稿目录？</button>
 
         </div>
         <div id="jyHintSelected" class="callout ok hidden">
